<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:title="@string/main" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_list"
        android:menuCategory="secondary"
        android:title="@string/catalog" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:menuCategory="secondary"
        android:title="@string/cart" />

    <item
        android:id="@+id/promotionsFragment"
        android:icon="@drawable/ic_promotions"
        android:menuCategory="secondary"
        android:title="@string/promotions" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:menuCategory="secondary"
        android:title="@string/profile" />
</menu>
